about me update

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ body {top: 0; left: 0; width: 99%; height: 97%;
 <p style="max-width: 500px;">
 <br>
 <br>
-I am a first-year student at Emory University, intending to major in Applied Mathematics and Statistics. I am passionate about creating insights from data and has experience with data-centric Python libraries and Microsoft Excel. On the side, I enjoy listening to lo-fi hip-hop and reading <a href="https://www.goodreads.com/nihalkhatwani">books</a>.</p>
+I am a first-year student at Emory University, intending to major in Applied Mathematics and Statistics. I am passionate about creating insights from data and have experience with data-centric Python libraries and Microsoft Excel. On the side, I enjoy listening to lo-fi hip-hop and reading <a href="https://www.goodreads.com/nihalkhatwani">books</a>.</p>
 
 <br>
 <a href="./index.html" style="padding-left: 165px;"> Back to Homepage</a>
