project page in progress

--- a/projects.html
+++ b/projects.html
@@ -3,14 +3,28 @@
 <head>
 <title>Nihal Khatwani - Projects</title>
 <style>
-body {top: 0; left: 0; width: 99%; height: 97%;
-    position: absolute; display: table}
-  p {display: table-cell; vertical-align: middle; text-align: center;
-     line-height: 1.5;}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+body {
+  display: table;
+}
+
+.my-text {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
 
 
 </style>
 </head>
+<div class="my-text">
+  <h1>In progress... :)</h1>
+</div>
 
 
 </body>
