changed project link to github

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {top: 0; left: 0; width: 99%; height: 97%;
 <a href="./about.html" >About Me</a> |
 <a href="https://www.linkedin.com/in/nihalkhat">LinkedIn</a> |
 <a href="https://drive.google.com/file/d/1JA2R-jIFd4RBcAaQokwoSSqQA7LXnnZX/view?usp=sharing" class="underline-on-hover">Resume</a> |
-<a href="./projects.html">Projects</a> 
+<a href="https://github.com/NihalKhatwani">Projects</a> 
 
 
 </body>
